@@ -11,6 +11,8 @@ haskell-devscripts (0.6.19) UNRELEASED; urgency=low
   * Create dh_haskell_provides, to create a ${haskell:Provides} substvar
     containing a string derived from the cabal package name, version and ABI
     hash.
+  * Depend on the virtual package names provided by dh_haskell_provides, if
+    dpkg knows about them.
 
  -- Joachim Breitner <nomeata@debian.org>  Wed, 13 Jan 2010 14:28:53 +0100
 
